--- a/ptt计算器.html
+++ b/ptt计算器.html
@@ -91,9 +91,9 @@
 	<hr>
 	
 	
-	<h2>目标得分和爬梯步数</h2>
+	<h2>根据目标单曲PTT计算</h2>
     <div class="input-container">
-        <label for="inputPtt">输入单曲PTT：</label>
+        <label for="inputPtt">输入目标单曲PTT：</label>
         <input type="number" id="inputPtt" step="any" min="0">
     </div>
 
