--- a/ptt计算器.html
+++ b/ptt计算器.html
@@ -255,7 +255,7 @@
                 calculate();
                 reverseCalculate();
                 calculateFromSteps();
-            }, 50);
+            }, 50);//延时50ms，根据需要修改
         }
 
     </script>
