--- a/ptt计算器.html
+++ b/ptt计算器.html
@@ -77,7 +77,7 @@
 
     <h2>根据目标爬梯步数计算</h2>
     <div class="input-container">
-        <label for="inputClimbSteps">输入目标爬梯步数：</label>
+        <label for="inputClimbSteps">目标爬梯步数：</label>
         <input type="number" id="inputClimbSteps" step="any" min="0">
     </div>
 
@@ -90,7 +90,7 @@
 	
 	<h2>根据目标单曲PTT计算</h2>
     <div class="input-container">
-        <label for="inputPtt">输入目标单曲PTT：</label>
+        <label for="inputPtt">目标单曲PTT：</label>
         <input type="number" id="inputPtt" step="any" min="0">
     </div>
 
