--- a/ptt计算器.html
+++ b/ptt计算器.html
@@ -117,7 +117,7 @@
 
         // 计算爬梯步数的函数
         function calculateClimbSteps(ptt, step, bonus) {
-            if (ptt > 0) {
+            if (ptt >= 0) {
                 return (step * (2.5 + 2.45 * Math.sqrt(ptt)) * (1 + bonus / 100)) / 50;
             }
             return 0;
