--- a/ptt计算器.html
+++ b/ptt计算器.html
@@ -105,72 +105,94 @@
         const MAX_PTT = 14;  // 最大单曲PTT值
 
         // 计算单曲PTT的函数
-        function calculatePtt(trackConstant, finalScore) {
-            if (finalScore >= 10000000) {
+        function calculatePtt(trackConstant, finalScore)
+		{
+            if (finalScore >= 10000000)
+			{
                 return trackConstant + 2;
-            } else if (finalScore >= 9800000) {
+            } 
+			else if (finalScore >= 9800000) 
+			{
                 return trackConstant + 1 + (finalScore - 9800000) / 200000;
-            } else {
+            } 
+			else 
+			{
                 return Math.max(0, trackConstant + (finalScore - 9500000) / 300000);
             }
         }
 
         // 计算爬梯步数的函数
-        function calculateClimbSteps(ptt, step, bonus) {
-            if (ptt >= 0) {
+        function calculateClimbSteps(ptt, step, bonus)
+		{
+            if (ptt >= 0)
+			{
                 return (step * (2.5 + 2.45 * Math.sqrt(ptt)) * (1 + bonus / 100)) / 50;
             }
             return 0;
         }
 
         // 通过单曲PTT倒推目标得分的函数
-        function calculateTargetScoreFromPtt(trackConstant, inputPtt) {
+        function calculateTargetScoreFromPtt(trackConstant, inputPtt) 
+		{
             let targetScore = 0;
-            if (inputPtt >= trackConstant + 2) {
+            if (inputPtt >= trackConstant + 2) 
+			{
                 targetScore = 10000000;
-            } else if (inputPtt >= trackConstant + 1) {
+            } 
+			else if (inputPtt >= trackConstant + 1) 
+			{
                 targetScore = 9800000 + (inputPtt - trackConstant - 1) * 200000;
-            } else {
+            } 
+			else 
+			{
                 targetScore = 9500000 + (inputPtt - trackConstant) * 300000;
             }
             return Math.ceil(targetScore);
         }
 
         // 从爬梯步数反推目标单曲PTT的函数
-        function calculatePttFromClimbSteps(trackConstant, inputClimbSteps, step, bonus) {
+        function calculatePttFromClimbSteps(trackConstant, inputClimbSteps, step, bonus)
+		{
             const numerator = (inputClimbSteps * 50) / (step * (1 + bonus / 100)) - 2.5;
             return Math.pow(numerator / 2.45, 2);
         }
 
         // 更新页面输出的函数，去除小数末尾的0，保留1到5位小数，用于ptt显示
-        function formatOutput(value) {
+        function formatOutput(value) 
+		{
             return value.toFixed(5).replace(/(\.\d*?)0+$/, "$1").replace(/\.$/, "");
         }
 
         // 去掉小数点后第二位及其后的部分，用于爬梯舍入
-        function formatClimbSteps(climbSteps) {
+        function formatClimbSteps(climbSteps) 
+		{
             const climbStepsStr = climbSteps.toString();
             const decimalIndex = climbStepsStr.indexOf(".");
-            if (decimalIndex !== -1) {
+            if (decimalIndex !== -1) 
+			{
                 return climbStepsStr.slice(0, decimalIndex + 2); // 只保留小数点后第一位
             }
             return climbStepsStr; // 如果没有小数点，则直接返回
         }
 
         // 强制输入大于0的检查
-        function checkPositiveValue(input) {
-            if (parseFloat(input.value) <= 0) {
+        function checkPositiveValue(input) 
+		{
+            if (parseFloat(input.value) <= 0) 
+			{
                 input.value = 0;
             }
         }
 
         // 计算并更新页面
-        function calculate() {
+        function calculate() 
+		{
             const trackConstant = parseFloat(document.getElementById('trackConstant').value) || 0;
             let finalScore = parseInt(document.getElementById('finalScore').value) || 0;
 
             // 限制最终得分不超过MAX_SCORE
-            if (finalScore > MAX_SCORE) {
+            if (finalScore > MAX_SCORE) 
+			{
                 finalScore = MAX_SCORE;
                 document.getElementById('finalScore').value = MAX_SCORE;
             }
@@ -195,50 +217,57 @@
 
 
 
-			// 根据目标爬梯步数计算，目标单曲PTT和目标得分
-			const inputClimbSteps = parseFloat(document.getElementById('inputClimbSteps').value) || 0;
-			if (inputClimbSteps > 0) {
-				const targetPttFromSteps = calculatePttFromClimbSteps(trackConstant, inputClimbSteps, step, bonus);
-				const targetScoreFromSteps = calculateTargetScoreFromPtt(trackConstant, targetPttFromSteps);
+            // 根据目标爬梯步数计算，目标单曲PTT和目标得分
+            const inputClimbSteps = parseFloat(document.getElementById('inputClimbSteps').value) || 0;
+            if (inputClimbSteps > 0) 
+			{
+                const targetPttFromSteps = calculatePttFromClimbSteps(trackConstant, inputClimbSteps, step, bonus);
+                const targetScoreFromSteps = calculateTargetScoreFromPtt(trackConstant, targetPttFromSteps);
 
-				// 检查是否超过最大PTT
-				if (targetPttFromSteps > trackConstant+2) {
-					document.getElementById('targetScoreFromSteps').textContent = MAX_SCORE;
-					document.getElementById('targetPttFromSteps').textContent = `步数超过上限`;
-				} else 
+                // 检查是否超过最大PTT
+                if (targetPttFromSteps > trackConstant+2) 
+				{
+                    document.getElementById('targetScoreFromSteps').textContent = MAX_SCORE;
+                    document.getElementById('targetPttFromSteps').textContent = `步数超过上限`;
+                } 
+				else 
+                {
+                    if (inputClimbSteps<calculateClimbSteps(0, step, bonus))
                     {
-                        if (inputClimbSteps<calculateClimbSteps(0, step, bonus))
-                        {
-                            document.getElementById('targetScoreFromSteps').textContent = 0;
-                            document.getElementById('targetPttFromSteps').textContent = `步数低于下限`;
-                        }
-                        else
-                        {
-                            document.getElementById('targetScoreFromSteps').textContent = formatOutput(targetScoreFromSteps);
-                            document.getElementById('targetPttFromSteps').textContent = formatOutput(targetPttFromSteps);   
-                        }
+                        document.getElementById('targetScoreFromSteps').textContent = 0;
+                        document.getElementById('targetPttFromSteps').textContent = `步数低于下限`;
                     }
-			}
+                    else
+                    {
+                        document.getElementById('targetScoreFromSteps').textContent = formatOutput(targetScoreFromSteps);
+                        document.getElementById('targetPttFromSteps').textContent = formatOutput(targetPttFromSteps);   
+                    }
+                }
+            }
 			
 			
-			//根据目标单曲PTT，计算目标得分和此时的爬梯步数
-			const inputPtt = parseFloat(document.getElementById('inputPtt').value) || 0;
-			if (inputPtt >= 0 && trackConstant>0) {
-				// 检查是否超过最大PTT
-				if (inputPtt > trackConstant+2) {
-					document.getElementById('targetScore').textContent = MAX_SCORE;
-					document.getElementById('reverseClimbSteps').textContent = "PTT超过上限";
-				} else 
+            //根据目标单曲PTT，计算目标得分和此时的爬梯步数
+            const inputPtt = parseFloat(document.getElementById('inputPtt').value) || 0;
+            if (inputPtt >= 0 && trackConstant>0) 
+			{
+                // 检查是否超过最大PTT
+                if (inputPtt > trackConstant+2) 
+				{
+                    document.getElementById('targetScore').textContent = MAX_SCORE;
+                    document.getElementById('reverseClimbSteps').textContent = "PTT超过上限";
+                } 
+                else 
                 {   
                     document.getElementById('targetScore').textContent = formatOutput(calculateTargetScoreFromPtt(trackConstant, inputPtt));
                     document.getElementById('reverseClimbSteps').textContent = formatClimbSteps(calculateClimbSteps(inputPtt, step, bonus));
-				}
-			}
+                }
+            }
 
         }
 
         // 监听输入框变化，重新计算
-        document.querySelectorAll("input").forEach(input => {
+        document.querySelectorAll("input").forEach(input => 
+		{
             input.addEventListener('input', calculate);
         });
 
